Fixed file list overflow.

--- a/ws_ide.css
+++ b/ws_ide.css
@@ -145,6 +145,11 @@ textarea.inputBox {
 #panelLeft .content {
   height: 510px;
   width: 150px;
+  overflow-x: hidden;
+}
+
+#fileList {
+  min-width: 150px;
 }
 
 div.panel {
